--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>This is a new branch</h1>
 <script src="app.js"></script>
 </body>
 </html>
